--- a/partymap-admin/src/index.css
+++ b/partymap-admin/src/index.css
@@ -1,6 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Figtree:wght@400;700&display=swap");
 @import "tailwindcss";
 
+@theme {
+  --breakpoint-xs: 480px;
+  --breakpoint-lgPlus: 1200px;
+  --color-primary: #e10098;
+  --color-secondary: #202020;
+  --color-alpha: #fab54e;
+}
+
 body {
   margin: 0;
   font-size: 11px;
@@ -37,43 +45,43 @@ code {
 
 /* Change the checkbox selection color */
 .custom-table .ant-checkbox-checked .ant-checkbox-inner {
-  background-color: #E10098 !important;
-  border-color: #E10098 !important;
+  background-color: #e10098 !important;
+  border-color: #e10098 !important;
 }
 
 .custom-table .ant-checkbox-wrapper:hover .ant-checkbox-inner,
 .custom-table .ant-checkbox:hover .ant-checkbox-inner {
-  border-color: #E10098 !important;
+  border-color: #e10098 !important;
 }
 
 .custom-table .ant-checkbox-checked::after {
-  border-color: #E10098 !important;
+  border-color: #e10098 !important;
 }
 
 .custom-pagination .ant-select-dropdown {
-  background-color: white !important; 
+  background-color: white !important;
   color: white !important;
 }
 
 .ant-pagination-item-active {
   border: transparent !important;
-  border-radius: 4px !important; 
-  outline: 1px solid #E10098 !important; 
+  border-radius: 4px !important;
+  outline: 1px solid #e10098 !important;
 }
 
 .custom-pagination .ant-select-selector {
-  background-color: white !important; 
+  background-color: white !important;
   color: black !important;
 }
 
 .custom-pagination .ant-select-item:hover {
   background-color: #f0f0f0 !important;
-  color: black !important; 
+  color: black !important;
 }
 
 .custom-pagination .ant-select-item.ant-select-item-selected {
   background-color: #e6f7ff !important;
-  color: black !important; 
+  color: black !important;
 }
 
 .dotted-line span:first-child {
